# pdbmol

./: CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: cd.yml
src/: main.rs
src/parser/: cif.rs
src/parser/cif/: charsets.rs  reserved.rs  structure.rs  values.rs  whitespace_and_comments.rs
src/parser/cif/values/: numeric.rs  strings.rs
