[package]
name = "pdbmol"
version = "0.1.0"
edition = "2021"
description = "Spec-compliant PDB/mmCIF read/write library"
repository = "https://github.com/Yoshanuikabundi/pdbmol"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
logos = "0.14.0"
