[package]
name = "pdbmol"
version = "0.1.0"
edition = "2021"
description = "Spec-compliant PDB(x)/mmCIF read/write library"
repository = "https://github.com/Yoshanuikabundi/pdbmol"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ariadne = "0.4.0"
winnow = "0.6.8"
